# trv-edgelake-infra

./: CLAUDE.md  Makefile.oh  OH_DEPLOYMENT_PLAN.md  OH_ERROR.md  OH_HUB_LEARNINGS.md  QUICKSTART_OH.md
docs/: JETSON_DEPLOYMENT.md
helm-charts/: AWS-DEPLOYMENT.md  GCP-DEPLOYMENT.md  README-TESTING.md  cleanup-test.sh  configure-insecure-registry.sh  deploy-test.sh  install-helm.sh  pre-deploy-checks.sh  setup-passwordless-sudo.sh  test-deployment.sh  test-values-trv-srv-011.yaml
helm-charts/edgelake-operator/templates/: configmap.yaml
kube-operator/: .dockerignore  Dockerfile  README.md  requirements.txt
kube-operator-go/oh-integration/: Makefile  README.md  service.definition.json
kube-operator-helm-based/: .dockerignore  Dockerfile  Makefile  README.md  watches.yaml
kube-operator-py/: Makefile  pyproject.toml
kube-operator-py/config/rbac/: clusterrole.yaml  clusterrolebinding.yaml
kube-operator-py/config/samples/: basic-operator.yaml
kube-operator-py/oh-integration/: node.policy.json  service.definition.json
kube-operator-py/src/edgelake_operator/: __init__.py  __main__.py  operator.py
kube-operator-py/src/edgelake_operator/models/: __init__.py  spec.py  status.py
kube-operator-py/src/edgelake_operator/resources/: __init__.py  deployment.py
kube-operator-py/src/edgelake_operator/utils/: __init__.py  hashing.py  validation.py
kube-operator/oh-integration/: Makefile  deployment.policy.json  service.policy.json
kube-operator/tests/: __init__.py
oh-services/: AGENT_INSTALL.md  README.md
oh-services/operator/: service.definition.json
trv-docker-compose/: .env.root.template  Makefile  QUICKSTART.md  README.md
(+34 files in other folders)
